--- a/src/BeeFee/ToDo.txt
+++ b/src/BeeFee/ToDo.txt
@@ -1,8 +1,11 @@
-1) Добавить возможность заливать логотип компании
+1) САША Добавить возможность заливать логотип компании
 
-2) Добавить возможность заливать логотип или обложка при добавлении нового документа. (можно грузить сначала на сервер приложения)
+2) САША Добавить возможность заливать логотип или обложку при добавлении нового документа. (можно грузить сначала на сервер приложения)
 
-3) Сделать отображение страницы предпросмотра в областях с другим дизайном (можно выделить стили страницы просмотра мероприятия в отдельный файл)
+3) ПАША Сделать отображение страницы предпросмотра в областях с другим дизайном (можно выделить стили страницы просмотра мероприятия в отдельный файл)
 
-4) Сделать обработку ошибок (ответов) на страницах удаления / редактирования
+4) ПАША Сделать обработку ошибок (ответов) на страницах удаления / редактирования
 
+5) ПАША Сверстать "админку"
+
+6) МИША Учитывать в ключе так же eventName. (я добавил еще один тип ключа)
