--- a/src/BeeFee/ToDo.txt
+++ b/src/BeeFee/ToDo.txt
@@ -13,3 +13,5 @@
 6) МИША Учитывать в ключе так же eventName. (я добавил еще один тип ключа)
 
 7) ПАША На форме регистрации, когда подставляются поля из профиля, наезжают на подпись в input`е
+
+8) Давать доступ либо к папке компании либо к папке мероприятия
